--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,193 @@
-:root {
-    --color-blue: #345ff6;
-    --color-gunmetal: #253347;
-    --color-dark-electric-blue: #5e6e85;
-    --color-border: #d8e2e7;
+.header {
+    padding-top: 32px;
+    position: relative;
+}
+
+.header__bg {
+    width: 100%;
+    height: 640px;
+    position: absolute;
+    background: linear-gradient(to bottom right, var(--bs-white), var(--color-blue-opacity));
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0 0 35px 35px;
+}
+
+.header__img-holder {
+    text-align: center;
+}
+
+.header__img {
+    width: 40px;
+}
+
+.header__description {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.header__description-heading {
+    font-size: var(--heading-size-l);
+    text-transform: capitalize;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+.header__description-info {
+    color: var(--color-dark-electric-blue);
+}
+
+.header__calculator {
+    width: 100%;
+    border-radius: 16px;
+    padding: 24px;
+    box-shadow: 0 10px 20px var(--color-blue-opacity);
+}
+
+.header__calculator-heading {
+    font-size: var(--heading-size-m);
+}
+
+.header__calculator-input {
+    font: inherit;
+    border: none;
+    outline: none;
+    font-size: var(--heading-size-m);
+    font-weight: 600;
+    width: 80%;
+}
+
+.header__measurement {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.header__measurement-type {
+    border: 1px solid var(--color-border);
+    width: 100%;
+    margin-top: 8px;
+    display: flex;
+    border-radius: 12px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__measurement-unit {
+    margin: 0;
+    color: var(--color-blue);
+    font-size: var(--heading-size-m);
+}
+
+.header__measurement-section {
+    flex-basis: 100%;
+}
+
+.header__result {
+    width: 100%;
+    padding: 32px;
+    margin-top: 34px;
+    background-color: var(--color-blue);
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+.header__result-welcome {
+
+}
+
+.header__result-welcome-heading {
+    font-size: var(--heading-size-m);
+    font-weight: 600;
+}
+
+.header__result-welcome-description,
+.header__result-welcome-heading {
+    color: var(--bs-white);
+}
+
+.header__result-welcome-description {
+    font-size: var(--body-size-s);
+}
+
+@media (min-width: 768px) {
+    .header__measurement {
+        flex-direction: row;
+        gap: 24px;
+    }
+
+    .header__measurement-section {
+        flex-basis: 47%;
+    }
+
+    .header__result {
+        padding: 32px;
+        border-radius: 16px 99px 99px 16px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .header__bg {
+        top: -1px;
+        left: 24px;
+        width: 878px;
+        height: 637px;
+    }
+
+    .header {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
+    .header__content {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .header__description {
+        flex-basis: 500px;
+        text-align: left;
+    }
+
+    .header__calculator {
+        flex-basis: 500px;
+    }
+
+    .header__measurement-type {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .header__img-holder {
+        margin-bottom: 50px;
+        text-align: left;
+    }
+
+    .header__img {
+        width: 64px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .header {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
+    .header__bg {
+        top: -1px;
+        left: 24px;
+        width: 978px;
+        height: 737px;
+    }
+
+
+    .header__description,
+    .header__calculator {
+        flex-basis: 564px;
+    }
 }
