--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 .header {
     padding-top: 32px;
+    padding-bottom: 32px;
     position: relative;
 }
 
@@ -7,7 +8,7 @@
     width: 100%;
     height: 640px;
     position: absolute;
-    background: linear-gradient(to bottom right, var(--bs-white), var(--color-blue-opacity));
+    background: var(--color-bg-gradient);
     top: 0;
     left: 0;
     z-index: -1;
@@ -189,5 +190,85 @@
     .header__description,
     .header__calculator {
         flex-basis: 564px;
+    }
+}
+
+
+/* bmi */
+.bmi {
+    width: 100%;
+    padding-bottom: 48px;
+}
+
+.bmi__container {
+    width: inherit;
+}
+
+.bmi__image {
+    width: 100%;
+}
+
+.bmi__description {
+    padding: 0 24px;
+    margin-top: 48px;
+}
+
+.bmi__heading {
+    font-size: 2em;
+}
+
+@media (min-width: 768px) {
+    .bmi__container {
+        display: flex;
+        align-items: center;
+        gap: 75px;
+    }
+
+    .bmi__image {
+        width: 435px;
+        margin-left: -90px;
+    }
+}
+
+
+/* prevention */
+.prevention {
+    background: var(--color-bg-gradient);
+    padding-top: 56px; 
+    padding-bottom: 56px; 
+}
+
+.prevention__section-content {
+    margin-top: 32px;
+}
+
+.prevention__section-mb {
+    margin-bottom: 40px;
+}
+
+.prevention__section-heading {
+    margin-bottom: 24px;
+    font-size: var(--heading-size-m);
+}
+
+@media (min-width: 768px) {
+    .prevention__section {
+        display: flex;
+        gap: 40px;
+        align-items: flex-start;
+    }
+
+    .prevention__section-content {
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .prevention__section {
+        display: block;
+    }
+
+    .prevention__section-content {
+        margin-top: 32px;
     }
 }
