--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,6 +114,11 @@
     font-size: var(--body-size-s);
 }
 
+.header__measurement-unit-choice {
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
 @media (min-width: 768px) {
     .header__measurement {
         flex-direction: row;
